src/objects/FC_Segment_2_Assignment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation %</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region_Assignment_ID__c</fullName>
        <label>Sales Region Assignment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(FC) Segment 2 Assignment</label>
    <listViews>
        <fullName>Seg2_view</fullName>
        <columns>NAME</columns>
        <columns>Market_Name__c</columns>
        <columns>Allocation_Percentage__c</columns>
        <columns>Sales_Region_Assignment_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Seg2 view</label>
        <language>en_US</language>
    </listViews>
</CustomObject>